fix: gallery image gets stretched on small screens
`max-width` made wide image shrink when viewport width is not large enough. This problem can be solved simply by removing the attribute.

--- a/assets/css/_markdown.scss
+++ b/assets/css/_markdown.scss
@@ -199,7 +199,6 @@ $em-text-color: #889E73;
     margin: 0;
     flex-shrink: 0;
     display: inline-block;
-    max-width: 100%;
     position: relative;
     box-shadow: inset 0 -2rem 2rem -2rem rgba(0, 0, 0, 0.1);
     img {
